# oblogout

./: Makefile.am  README.md  autogen.sh  clean.sh  configure.ac
po/: POTFILES.in  ru.po
src/: Makefile.am  action.c  action.h  logout.c  setting.c  setting.h
themes/: Makefile.am
