
oxygen_DATA = \
	oxygen/cancel.png\
	oxygen/hibernate.png \
	oxygen/light.png \
	oxygen/lock.png \
	oxygen/logout.png \
	oxygen/restart.png \
	oxygen/safesuspend.png \
	oxygen/shutdown.png \
	oxygen/suspend.png \
	oxygen/switch.png

oxygendir = \
	$(pkgdatadir)/oxygen

EXTRA_DIST = \
	$(oxygen_DATA)\
	$(white_DATA)

white_DATA = \
	white/cancel.png\
	white/hibernate.png \
	white/light.png \
	white/logout.png \
	white/restart.png \
	white/shutdown.png \
	white/suspend.png \
	white/switch.png

whitedir = \
	$(pkgdatadir)/white

## File created by the gnome-build tools

